<resources>
    <string name="app_name">Hacigo</string>
    <string name="title_home">Home</string>
    <string name="title_parenthood">Parenthood</string>
    <string name="title_journal">Journal</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Account</string>
    <string name="Welcome">Selamat Datang</string>
    <string name="pick_the_food">Pilih Makanan</string>
    <string name="status_title">Status Gizi Buah Hati</string>
    <string name="status_ideal">Status Ideal : Belum ada data</string>
    <string name="rentang_ideal">Rentang Ideal : Belum ada rekomendasi</string>
    <string name="desc_detect">Dapatkan resep,
berikan nutrisi terbaik
untuk anak anda.</string>
    <string name="parenthood">Parenthood</string>
    <string name="desc_parenthood">Dapatkan artikel dan acara terbaik parenting
oleh para ahli.</string>
    <string name="kiddo_grow_chart">Kiddo Grow Chart</string>
    <string name="journal_main_title">Jurnal</string>
    <string name="journal_main_desc">Abadikan kebersamaan Anda dengan buah hati tercinta</string>
    <string name="kiddo_journal">Jurnal Kiddo</string>
    <string name="toolbar">toolbar</string>
    <string name="notes">Journal</string>
    <string name="journal_title">Judul Journal</string>
    <string name="journal_subtitle">Sub Judul Journal</string>
    <string name="kiddo_age">Usia Anak dalam bulan</string>
    <string name="kiddo_weight_kg">Berat Anak dalam Kg</string>
    <string name="kiddo_height_cm">Tinggi Anak dalam Cm</string>

    <string name="pregnant_age">Usia kehamilan dalam bulan</string>
    <string name="pregnant_weight_kg">Berat Bunda dalam Kg</string>
    <string name="pregnant_height_kg">Tinggi Bunda dalam Cm</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="storage_permission_text">We need permission from your device</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera and storage permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">
        <![CDATA[


            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.


        ]]>
    </string>
    <string name="command">Arahkan kamera ke bahan makanan\n Kami akan merekomendasikan resep sesuai pedoman gizi seimbang\n Berdasarkan bahan makanan ini</string>
    <string name="detect_food">Detect Food</string>
    <string name="see_more">Selengkapnya</string>
    <string name="recipes">Recipes</string>
    <string name="bahan">Bahan :</string>
    <string name="cara_membuat">Cara Membuat :</string>
    <string name="title_text">Title text</string>
    <string name="skip_intro">Lewati</string>
    <string name="next">Selanjutnya</string>
    <string name="nama_anda">Nama Anda</string>
    <string name="login_with_google_account">Lanjutkan dengan Google</string>
    <string name="masuk_disini"><u> Masuk disini</u></string>
    <string name="quest_account">Apakah Ibu <b>belum</b> punya akun? </string>
    <string name="daftar_sekarang"><u> Daftar Sekarang</u></string>
    <string name="quest_acc">Apakah Ibu <b>sudah</b> punya akun? </string>
    <string name="facebook_app_id">566824204560749</string>
    <string name="fb_login_protocol_scheme">fb566824204560749</string>
    <string name="continueFacebook">Lanjutkan dengan Facebook</string>
    <string name="kiddo_journal_title">Kiddo Journal</string>
    <string name="kiddo_journal_desc">Catat tumbuh kembang buah hati Anda di sini</string>
    <string name="asi_journal_title">ASI Journal</string>
    <string name="asi_journal_desc">Cek rutinitas ASI eksklusif bagi si kecil di sini</string>
    <string name="pregnant_journal_title">Pregnant Journal</string>
    <string name="pregnant_journal_desc">Abadikan momen kehamilan Anda di sini</string>
    <string name="title_kia">Buku KIA</string>
    <string name="desc_kia">Dapatkan pengetahuan lengkap melalui buku Kesehatan Ibu Anak</string>
    <string name="title_knowledgebase">Knowledge Base</string>
    <string name="desc_knowledgebase">Pahami informasi dasar seputar gizi seimbang bagi buah hati</string>
    <string name="perempuan">Perempuan</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="b_diatas_b_6_bulan"><b>Diatas</b> 6 bulan</string>
    <string name="dibawah_6_bulan"><b>Dibawah</b> 6 bulan</string>
    <string name="edit_profile">Melengkapi Profil</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="gender_man">Laki-Laki</string>
    <string name="gender_woman">Perempuan</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="priority">Priority</string>
    <string name="lokasi_anda">Lokasi Anda</string>
    <string name="imunisasi_journal">Imunisasi Journal</string>
    <string name="desc_imunisasi">Pantau pemberian imunisasi si buah hati agar terhindar dari penyakit</string>
    <string name="jurnal_imunisasi">Jurnal Imunisasi</string>
    <string name="jenis_imunisasi">Jenis Imunisasi :</string>
    <string name="bulan_semua">Semua</string>
    <string name="bulan_6_10">6–10 Bulan</string>
    <string name="bulan_11_18">11–18 Bulan</string>
    <string name="bulan_19_24">19–24 Bulan</string>
    <string name="hidupkan_notifikasi">Hidupkan Notifikasi</string>
    <string name="search">Isi jurnal bulanan ibu sekarang</string>
    <string name="reminder">Notifikasi Telah Dinyalakan</string>
    <string name="remindcancel">Notifikasi dimatikan</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="open_the_app">Selalu pantau buah hati agar terhindar dari stunting</string>
    <string name="alarm">alarm</string>
    <string name="nutrisi_ibu_hamil"><b>Baru!</b>\nNutrisi Ibu Hamil</string>
</resources>