<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainJournalActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui._kiddojournal.KiddoJournalActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-47dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/relativeBackground"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_pink_board_wave_2" />

                <ImageView
                    android:id="@+id/arrow_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="20dp"
                    android:elevation="5dp"
                    android:src="@drawable/ic_arrow_back" />

                <TextView
                    android:id="@+id/journal_main_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/arrow_back"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/journal_main_title"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/journal_main_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/journal_main_title"
                    android:layout_marginStart="42dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/journal_main_desc"
                    android:textColor="@color/white"
                    android:textSize="15sp" />


            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_journal_kiddo"
                android:layout_width="300dp"
                android:layout_height="145dp"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="9dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/relativeBackground">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_kiddo_journal"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="0dp"
                        android:src="@drawable/ic_kiddo_journal" />

                    <TextView
                        android:id="@+id/tv_kiddo_journal_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="40dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/kiddo_journal_title"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_kiddo_journal_desc"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_kiddo_journal_title"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="23dp"
                        android:fontFamily="@font/poppins_reguler"
                        android:text="@string/kiddo_journal_desc"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/priority_kiddo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_kiddo_journal_desc"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="70dp"
                        android:text="@string/priority"
                        android:fontFamily="@font/poppins_bold"
                        android:visibility="invisible"
                        android:textSize="12sp" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_journal_asi"
                android:layout_width="300dp"
                android:layout_height="145dp"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="9dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_journal_kiddo">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_asi_journal"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="0dp"
                        android:src="@drawable/ic_asi_journal" />

                    <TextView
                        android:id="@+id/tv_asi_journal_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="60dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/asi_journal_title"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_asi_journal_desc"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_asi_journal_title"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="23dp"
                        android:fontFamily="@font/poppins_reguler"
                        android:text="@string/asi_journal_desc"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/priority_asi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_asi_journal_desc"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="70dp"
                        android:text="@string/priority"
                        android:fontFamily="@font/poppins_bold"
                        android:visibility="invisible"
                        android:textSize="12sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_journal_pregnant"
                android:layout_width="300dp"
                android:layout_height="145dp"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="9dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_journal_asi">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_mom_pregnant"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/desainibu1" />

                    <TextView
                        android:id="@+id/tv_pregnant_journal_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/pregnant_journal_title"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_pregnant_journal_desc"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_pregnant_journal_title"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="28dp"
                        android:fontFamily="@font/poppins_reguler"
                        android:text="@string/pregnant_journal_desc"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/priority_pregnant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_pregnant_journal_desc"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="70dp"
                        android:text="@string/priority"
                        android:fontFamily="@font/poppins_bold"
                        android:visibility="invisible"
                        android:textSize="12sp" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_imunisasi"
                android:layout_width="300dp"
                android:layout_height="145dp"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="9dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_journal_pregnant">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_imunisasi"
                        android:layout_width="65dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/ic_imunisasi" />

                    <TextView
                        android:id="@+id/tv_imunisasi_journal_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/imunisasi_journal"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_imunisasi_journal_desc"
                        android:layout_width="140dp"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/tv_imunisasi_journal_title"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="28dp"
                        android:fontFamily="@font/poppins_reguler"
                        android:text="@string/desc_imunisasi"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/priority_imunisasi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_imunisasi_journal_desc"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="70dp"
                        android:text="@string/priority"
                        android:fontFamily="@font/poppins_bold"
                        android:visibility="invisible"
                        android:textSize="12sp" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>




        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>