<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.AccountFragment">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_mom"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_mom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111" />

    <Button
        android:id="@+id/btn_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_mom"
        android:text="Edit Profil" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="15sp"
        android:textColor="@color/prime"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/hidupkan_notifikasi"
        app:layout_constraintTop_toBottomOf="@id/btn_edit_profile"
        android:textOff="ON"
        android:textOn="OFF"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:text="@string/nama_anda"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch1"/>

    <TextView
        android:id="@+id/tv_name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:textSize="20sp"
        android:textColor="@color/black"
        tools:text="Irene Tamba"
        android:layout_marginTop="5dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name"/>

    <View
        android:id="@+id/divider_line"
        android:layout_width="300dp"
        android:layout_height="0.2dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name_field" />

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:text="Usia"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_line"/>

    <TextView
        android:id="@+id/tv_age_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="24 Tahun"
        android:layout_marginTop="5dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_age"/>

    <View
        android:id="@+id/divider_line2"
        android:layout_width="300dp"
        android:layout_height="0.2dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_age_field" />

    <TextView
        android:id="@+id/tv_kid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/pink_dark"
        android:text="Nama Anak"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_line2"/>

    <TextView
        android:id="@+id/tv_kid_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="Annisa"
        android:layout_marginTop="5dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_kid"/>

    <View
        android:id="@+id/divider_line3"
        android:layout_width="300dp"
        android:layout_height="0.2dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_kid_field" />


    <TextView
        android:id="@+id/tv_gender_kid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/pink_dark"
        android:text="Jenis Kelamin"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_line3"/>

    <TextView
        android:id="@+id/tv_gender_kid_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="Perempuan"
        android:layout_marginTop="5dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_gender_kid"/>

    <View
        android:id="@+id/divider_line4"
        android:layout_width="300dp"
        android:layout_height="0.2dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_gender_kid_field" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:text="Email Anda"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_line4"/>

    <TextView
        android:id="@+id/tv_email_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:textSize="20sp"
        android:textColor="@color/black"
        tools:text="irenetamba@gmail.com"
        android:layout_marginTop="5dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email"/>

    <View
        android:id="@+id/divider_line5"
        android:layout_width="300dp"
        android:layout_height="0.2dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email_field" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:text="@string/lokasi_anda"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_line5"/>
    <TextView
        android:id="@+id/tv_location_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:textSize="20sp"
        android:textColor="@color/black"
        tools:text="Jakarta"
        android:layout_marginTop="5dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_location"/>

    <Button
        android:id="@+id/btn_signout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/grey"
        android:textColor="@color/prime"
        android:text="Sign Out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_location_field"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>